@@ -2107,6 +2107,12 @@ $wgGenerateThumbnailOnParse = true;
 /** Obsolete, always true, kept for compatibility with extensions */
 $wgUseImageResize = true;
 
+/** 
+ * Use this if you have issues using gd for image thumbnails--like with 
+ * safe_mode--and want to force thumbnailing to users. Not needed for most
+ * installs. See bug 12970.
+ */
+$wgForceClientThumbnails = false;
 
 /** Set $wgCommandLineMode if it's not set already, to avoid notices */
 if( !isset( $wgCommandLineMode ) ) {
