@@ -25,6 +25,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Added $wgUseTwoButtonsSearchForm to choose the Search form behavior/look
 * Added $wgNoFollowDomainExceptions to allow exempting particular domain names
   from rel="nofollow" on external links
+* (bug 12970) Added $wgForceClientThumbnails to force client rendering of thumbs,
+  instead of falling back to GD.
 
 === New features in 1.15 ===
 
